# neodriftout

./: .gitignore  CMakeLists.txt  README.md
build2/: CMakeCache.txt  cmake_install.cmake
build2/neodriftout.dir/Debug/: neodriftout.exe.recipe
build2/neodriftout.dir/Debug/neodriftout.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  neodriftout.lastbuildstate
build2/neogeorecomp_build/: cmake_install.cmake
build2/neogeorecomp_build/neogeorecomp.dir/Debug/neogeorecomp.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  neogeorecomp.lastbuildstate
build2/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
build2/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.read.1.tlog
build2/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
build2/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
docs/: game_notes.md
recomp/: gameplay.c  helpers.c  init.c  main_loop.c  overrides.c  states.c  subsystems.c  vectors.c  vram_dma.c
roms/: drift_m1.rom  drift_p1.rom  drift_s1.rom  drift_v1.rom  drift_v2.rom
src/: main.c
src/autorecomp/: recomp_000200_000D9A.c  recomp_000200_000DC8.c  recomp_000200_000E02.c  recomp_000200_000EE0.c  recomp_000D9A_0012FA.c  recomp_000DC8_001304.c  recomp_000DC8_001336.c  recomp_000E00_001352.c  recomp_000EE0_001612.c  recomp_0012FA_002610.c  recomp_001300_0027F6.c  recomp_001336_002800.c  recomp_001374_00288C.c  recomp_001612_003640.c  recomp_002610_004366.c  recomp_0027F6_0043E6.c  recomp_002800_004400.c  recomp_00288C_0046C6.c  recomp_00363C_004DAA.c  recomp_004366_005354.c  recomp_0043E6_00546A.c  recomp_004400_005490.c  recomp_0046C6_0056A6.c  recomp_004DAA_006388.c  recomp_005354_006704.c  recomp_00546A_006768.c  recomp_005490_0067A8.c  recomp_0056A6_006B74.c  recomp_006388_007AE4.c  recomp_006700_007CAC.c  recomp_006768_007CC8.c  recomp_0067A8_007D0E.c  recomp_006B74_007ED2.c  recomp_007AE4_009114.c  recomp_007CAC_009A82.c  recomp_007CAC_009C00.c  recomp_007CF4_009CA6.c  recomp_007D0C_009D00.c  recomp_007F0C_00A804.c  recomp_009614_00B458.c  (+1007 more)
tools/: analyze_rom.py  generate_recomp.py
